--- a/contest/templates/index.html
+++ b/contest/templates/index.html
@@ -25,7 +25,7 @@
 	</li>
 
 {% empty %}
-	<li>Sorry, there are no contests I can show you</li>
+	<li>Sorry, there are no contests, I can show you</li>
 {% endfor%}
 </ul>
 
@@ -34,7 +34,8 @@
 <p>Good luck!</p>
 
 <h2>Fees and prizes</h2>
-<p>To enter a contest you have to pay an entrance fee. We always leave 5D from all entrance fees in every contest. The rest goes on the account of the winner. The 5D stays by us, because we have to pay <i>TXFEE</i> when the winner withdraws his cash. If you know, how to precisely count <i>TXFEE</i>, please, let us know, so we can increase the winner's prize.</p>
-<p>This scenario is going to change. You'll be warned before it happen on this site.</p>
+<p>To enter a contest you have to pay an entrance fee. As soon, as the contest ends, the winner becomes a prize, which he can withdraw to the address he provides.</p>
+<p>Currently, the service takes no charge for using it and all entrance fees are paid back to the winner. This may change in the future, but you will be warned before on this site.</p>
+<p>As using the service is free, we ask for you donation!</p>
 
 {% endblock %}
