visuall improvements and corrected notifications

--- a/contest/templates/get_key.html
+++ b/contest/templates/get_key.html
@@ -1,4 +1,4 @@
-Well, it's your magic key. Please, keep it, because we won't.
+It's your magic key. Please, keep it, because we won't.
 
 {{ key }}
 
