--- a/contest/templates/contest.html
+++ b/contest/templates/contest.html
@@ -7,7 +7,7 @@ Contest #{{contest.id}}
 {% block header %}
 <h1>#{{ contest.id }}. {% block task_name %}Longest cycle{% endblock %}</h1>
 	<p class="dates">Announced: {{ contest.announce_date }}.
-		Starts at: {{ contest.start_date }}. Ends at: {{ contest.end_date }}.
+		Starts on: {{ contest.start_date }}. Ends on: {{ contest.end_date }}.
 	Fee: {{ contest.entrance_fee }}. Number of contestants: {{ num_contestants }}.
 	{% if over %} Prize: {% else %} Expected prize (at least): {% endif %} {{ prize }}.</p>
 {% endblock %}
@@ -22,7 +22,7 @@ Contest #{{contest.id}}
 {% endif %}
 
 {% if is_contestant and not authorized and not over %}
-	<p class="alert alert-warning">Please, pay your entrance fee on: {{ contestant.entrance_address }} and wait for some confirmations. We've already received: {{ contestant_received }}/{{ contest.entrance_fee }}. Refresh this page to check if your transaction's already come.</p>
+	<p class="alert alert-warning">Please, pay your entrance fee on: {{ contestant.entrance_address }} and wait for some confirmations. We've already received: {{ contestant_received }}/{{ contest.entrance_fee }}. Refresh this page to check if your transaction is already executed.</p>
 {% endif %}
 
 {% if is_contestant and authorized %}
@@ -52,9 +52,9 @@ Contest #{{contest.id}}
 {% block task_long_descr %}
 		<p>It's not easy to find the longest cycle in a general graph. You're given a simple  graph (<i>i.e.</i> undirected, without multiedges and loops). Your task is to find a simple cycle in it (a path that begins and ends in the same vertex, but goes through any edge and vertex at most once). Remember, the longer cycle you find, the more points you get.</p>
 
-		<p>Vertices are numbered from 1. You can assume, that there exist at least a cycle of length 2 in each input graph.</p>
+		<p>Vertices are numbered from 1. You can assume, there exists at least one cycle of length at least 3 in each input graph.</p>
 
-		<p><b>Input:</b> Numbers <i>n</i> and <i>m</i> - the number of vertices and edges. In the next <i>m</i> lines follow integers <i>a</i> and <i>b</i>, which mean, that an edge connects vertex <i>a</i> and <i>b</i>.</p>
+		<p><b>Input:</b> In the first line there are numbers <i>n</i> and <i>m</i> - the number of vertices and edges. In the next <i>m</i> lines follow integers <i>a</i> and <i>b</i>, which mean, that an edge connects vertices <i>a</i> and <i>b</i>.</p>
 		<p><b>Output:</b> The correct output consists of two lines. The first contains the length of the cycle you've found, and the next should be the list of numbers of subsequent vertices.</p>
 	</div>
 {% endblock %}
@@ -74,7 +74,8 @@ Contest #{{contest.id}}
 	{% for r in results %}
 
 	<tr>
-		{% for cell in r %}
+		<td>{{ r|first|slice:":7" }}...</td>
+		{% for cell in r|slice:"1:" %}
 		<td>{{ cell }}</td>
 		{% endfor %}
 	</tr>
@@ -121,7 +122,7 @@ Contest #{{contest.id}}
 			<td>{{ sub.date }}</td>
 			<td>{{ sub.input.pk }}</td>
 			<td>{{ sub.contestant.hash |slice:":7"  }}...</td>
-			<td>{{ sub.hash }}</td>
+			<td style="text-overflow: ellipsis; overflow: hidden; max-width: 30%">{{ sub.hash }}</td>
 			<td>{{ sub.score }}</td>
 		</tr>
 	{% empty %}
