removed an ugly dot after pm./am.

--- a/contest/templates/index.html
+++ b/contest/templates/index.html
@@ -24,7 +24,7 @@
 		<p>
 		<small>
 		{% if contest.over %}
-		<span class="date">{{ contest.end_date }}.</span>
+		<span class="date">{{ contest.end_date }}</span>
 		<span class="over">Over!</span>
 		{% else %}
 		<span class="date">{{ contest.start_date }}</span>
