--- a/contest/templates/submit_form.html
+++ b/contest/templates/submit_form.html
@@ -1,4 +1,4 @@
-<form action="{% url 'submit' input key %}" method="POST">{% csrf_token %}
+<form action="{% url 'submit' input key %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
 	{{ form.as_p }}
 	<input type="submit" value="Submit" />
 </form>
