visual improvement in index.html

--- a/contest/templates/index.html
+++ b/contest/templates/index.html
@@ -36,7 +36,7 @@
 	</div>
 
 {% empty %}
-	<div>Sorry, there are no contests, I can show you</div>
+	<div class="col-sm-12"><p class="alert alert-info">Sorry, there's nothing I can show you. Please, come again later!</p></div>
 {% endfor%}
 </div>
 
