visual in index.html

--- a/contest/templates/index.html
+++ b/contest/templates/index.html
@@ -49,4 +49,6 @@
 <p>Currently, using the service is free of charge and all participants' entrance fees are paid back to the winner. This may change in the future, but you will be warned before it happens on this site.</p>
 <p>As using the service is free, we gently ask for generous donations!</p>
 
+<p>DOGE: DDxa9SbENfFSy2QtvzY2CLR3r2iHniWXRD BTC:1Hk1Ds1psTqXXJwtwpCsxWt5Wt5BibaKj8</p>
+
 {% endblock %}
