--- a/heura/templates/500.html
+++ b/heura/templates/500.html
@@ -1,1 +1,3 @@
-500. Server error. Please, contact administrator.
+{% load i18n %}
+
+{% trans "500. Server error. Please, contact administrator." %}
