--- a/heura/templates/withdraw_form.html
+++ b/heura/templates/withdraw_form.html
@@ -1,4 +1,6 @@
+{% load i18n %}
+
 <form action="{% url 'withdraw' key %}" method="POST">{% csrf_token %}
 	{{ form.as_p }}
-	<input type="submit" value="Submit" />
+	<input type="submit" value="{% trans "Submit" %}" />
 </form>
