--- a/heura/templates/404.html
+++ b/heura/templates/404.html
@@ -1,1 +1,4 @@
-404. The page you're looking for hasn't been found.
+{% load i18n %}
+
+
+{% trans "404. The page you're looking for hasn't been found." %}
