--- a/heura/templates/longest_cycle.html
+++ b/heura/templates/longest_cycle.html
@@ -1,2 +1,19 @@
 {% extends "contest.html" %}
 
+{% load i18n %}
+
+{% block task_name %}{% trans "Longest cycle" %}{% endblock %}
+
+{% block task_long_descr %}
+{% blocktrans %}
+<p>It's not easy to find the longest cycle in a general graph. You're given a simple  graph (<i>i.e.</i> undirected, without multiedges and loops). Your task is to find a simple cycle in it (a path that begins and ends in the same vertex, but goes through any edge and vertex at most once). The longer cycle you find, the more points you get.</p>
+
+<p>Vertices are numbered from 1. You can assume that there exists at least one cycle of length at least 3 in each input graph.</p>
+
+<p><b>Input:</b> In the first line there are numbers <i>n</i> and <i>m</i> – the number of vertices and edges. In the next <i>m</i> lines follow integers <i>a</i> and <i>b</i>, which mean, that an edge connects vertices <i>a</i> and <i>b</i>.</p>
+<p><b>Output:</b> The correct output consists of two lines. The first contains the length of the cycle you've found, and the next should be the list of numbers of subsequent vertices.</p>
+
+<p>Remember, you never have to find the longest possible cycle! It's usually impossible! Your answer should contain a cycle of any length. However, longer cycles recieve more points.</p>
+{% endblocktrans %}
+{% endblock task_long_descr %}
+
