link to GitHub repository on index.html

--- a/heura/templates/index.html
+++ b/heura/templates/index.html
@@ -53,4 +53,7 @@
 
 <p>DOGE: DDxa9SbENfFSy2QtvzY2CLR3r2iHniWXRD BTC: 1Hk1Ds1psTqXXJwtwpCsxWt5Wt5BibaKj8</p>
 
+<p>{% trans "We're on GitHub." %} <a href="http://github.com/mluszczyk/heura">
+{% trans 'Repository' %} Heura</a></p>
+
 {% endblock %}
