language switching in templates

--- a/heura/templates/base.html
+++ b/heura/templates/base.html
@@ -13,6 +13,7 @@
 
     <div class="jumbotron">
       <div class="container">
+        {% include "switch_lang.html" %}
         {% block header %}{% endblock %}
       </div>
     </div>
