--- a/heura/templates/switch_lang.html
+++ b/heura/templates/switch_lang.html
@@ -4,11 +4,11 @@
 
 <div class="pull-right">
 <form action="{% url 'set_language' %}" method="post">
-<span class="glyphicon glyphicon-flag"></span>
 {% csrf_token %}
 {% get_language_info_list for LANGUAGES as languages %}
 {% for language in languages %}
 <button type="submit" class="btn btn-link btn-sm" name="language" value="{{ language.code }}">{{ language.code }}</button>
 {% endfor %}
+<span class="glyphicon glyphicon-globe"></span>
 </form>
 </div>
